<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="utcc.cken.tae.som.healthrecord.AboutmeActivity"
    android:background="@drawable/wall">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <EditText
            android:layout_width="@dimen/edit_text"
            android:layout_height="wrap_content"
            android:id="@+id/editText19"
            android:layout_gravity="center_horizontal"
            android:hint="@string/User_regis"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="@dimen/edit_text"
            android:layout_height="wrap_content"
            android:id="@+id/editText20"
            android:layout_gravity="center_horizontal"
            android:hint="@string/Pass_regis" />

        <EditText
            android:layout_width="@dimen/edit_text"
            android:layout_height="wrap_content"
            android:id="@+id/editText22"
            android:layout_gravity="center_horizontal"
            android:hint="@string/name" />

        <EditText
            android:layout_width="@dimen/edit_text"
            android:layout_height="wrap_content"
            android:id="@+id/editText23"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:id="@+id/textView45"
            android:textSize="@dimen/h2"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp" />

        <RadioGroup
            android:layout_width="@dimen/edit_text"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/radioButton15"
                android:checked="true"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/radioButton16"
                android:layout_weight="1" />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="@dimen/edit_text"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:id="@+id/textView46"
                android:textSize="@dimen/h2"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner7"
                android:layout_weight="2" />
        </LinearLayout>

        <EditText
            android:layout_width="@dimen/edit_text"
            android:layout_height="wrap_content"
            android:id="@+id/editText24"
            android:layout_gravity="center_horizontal"
            android:hint="@string/weight" />

        <EditText
            android:layout_width="@dimen/edit_text"
            android:layout_height="wrap_content"
            android:id="@+id/editText25"
            android:layout_gravity="center_horizontal"
            android:hint="@string/height" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:onClick="clickBackHome"
                android:id="@+id/button25"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:id="@+id/button26"
                android:layout_marginLeft="20dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>