<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="utcc.cken.tae.som.healthrecord.HeartActivity"
    android:background="@drawable/wall">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#82ffffff"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="160dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heartdisease"
            android:id="@+id/textView14"
            android:textSize="@dimen/h1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="@dimen/edit_text"
            android:layout_height="wrap_content"
            android:text="@string/stress"
            android:id="@+id/textView15"
            android:textSize="@dimen/h2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/never"
                android:id="@+id/radioButton3"
                android:checked="true"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sometime"
                android:id="@+id/radioButton4"
                android:layout_weight="1"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/often"
                android:id="@+id/radioButton5"
                android:layout_weight="1"
                android:checked="false" />
        </RadioGroup>

        <TextView
            android:layout_width="@dimen/edit_text"
            android:layout_height="wrap_content"
            android:text="@string/alcohol"
            android:id="@+id/textView16"
            android:textSize="@dimen/h2"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:layout_marginTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/never"
                android:id="@+id/radioButton9"
                android:checked="true"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sometime"
                android:id="@+id/radioButton10"
                android:layout_weight="1"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/often"
                android:id="@+id/radioButton11"
                android:layout_weight="1"
                android:checked="false" />
        </RadioGroup>

        <TextView
            android:layout_width="@dimen/edit_text"
            android:layout_height="wrap_content"
            android:text="@string/exercise"
            android:id="@+id/textView17"
            android:textSize="@dimen/h2"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:layout_marginTop="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/never"
                android:id="@+id/radioButton12"
                android:checked="true"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sometime"
                android:id="@+id/radioButton13"
                android:layout_weight="1"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/often"
                android:id="@+id/radioButton14"
                android:layout_weight="1"
                android:checked="false" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button12"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="false" />

</RelativeLayout>