<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="utcc.cken.tae.som.healthrecord.LowpressureActivity"
    android:background="@drawable/wall">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:background="#82ffffff"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowpressure"
            android:id="@+id/textView18"
            android:textSize="@dimen/h1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heigh_dimen" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/systolic"
                android:id="@+id/textView21"
                android:textSize="@dimen/h2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="@dimen/edit_text_short"
                android:layout_height="wrap_content"
                android:id="@+id/editText12"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/heigh_dimen" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diastolic"
                android:id="@+id/textView22"
                android:textSize="@dimen/h2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="@dimen/edit_text_short"
                android:layout_height="wrap_content"
                android:id="@+id/editText13"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sleep"
                android:id="@+id/textView19"
                android:textSize="@dimen/h2"
                android:layout_weight="1"
                android:layout_marginLeft="30dp" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner9"
                android:layout_weight="2"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/drink"
                android:id="@+id/textView20"
                android:textSize="@dimen/h2"
                android:layout_weight="1"
                android:layout_marginLeft="30dp" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner10"
                android:layout_weight="2"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button13"
        android:layout_alignParentBottom="true" />

</RelativeLayout>