<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="utcc.cken.tae.som.healthrecord.HomeActivity"
    android:background="@drawable/wall">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutme"
        android:id="@+id/button11"
        android:onClick="clickAboutme"
        android:layout_alignParentBottom="true"
        android:background="#89a4b0"
        android:textColor="#030303"
        android:textSize="@dimen/h2" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_rec"
            android:id="@+id/textView38"
            android:textSize="@dimen/h1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:padding="10dp">

            <Button
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/button9"
                android:onClick="clickRecord"
                android:layout_weight="1"
                android:background="@drawable/p1" />

            <Button
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/button10"
                android:onClick="clickDisease"
                android:layout_weight="1"
                android:background="@drawable/p2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:padding="10dp">

            <TextView
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:text="@string/title_record"
                android:id="@+id/textView12"
                android:textSize="@dimen/h3"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_disease"
                android:id="@+id/textView13"
                android:textSize="@dimen/h3"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:id="@+id/textView39"
            android:textSize="@dimen/h1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="156dp"
            android:layout_height="132dp"
            android:id="@+id/button20"
            android:onClick="clickCheckhealth"
            android:background="@drawable/check"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>